[nosetests]
with-coverage=1
cover-package=kivy
with-id=1
verbosity=2
logging-level=DEBUG

[kivy]
cython_min=0.24
cython_max=0.29.21
cython_exclude=0.27,0.27.2
python_versions=3.6 - 3.9

[coverage:run]
parallel = True
branch = True
omit =
    */pyinstaller/*_widget/*
plugins =
    kivy.tools.coverage

[options]
python_requires = >=3.6
install_requires =
    Kivy-Garden>=0.1.4
    docutils
    pygments
dependency_links = https://github.com/kivy-garden/garden/archive/master.zip

[options.extras_require]
tuio = oscpy
dev =
    pytest>=3.6
    pytest-cov
    pytest_asyncio!=0.11.0
    pytest-timeout
    pyinstaller
    sphinx
    sphinxcontrib-blockdiag
    sphinxcontrib-seqdiag
    sphinxcontrib-actdiag
    sphinxcontrib-nwdiag
    flake8
base =
    pillow
    docutils
    pygments
media =
    ffpyplayer; sys_platform == "linux" or sys_platform == "darwin"
full =
    pillow
    docutils
    pygments
    ffpyplayer; sys_platform == "linux" or sys_platform == "darwin"

[flake8]
ignore = E125,E126,E127,E128,E402,E741,E731,W503,F401,W504,F841,E722
max-line-length = 80
exclude = __pycache__,.tox,.git/,doc/,build/,.eggs/
statistics = true
show-source = true
count = true
